# Procedural-SDF-Editor

./: CMakeLists.txt  README.md
data/: libigl-cursive-C.dmat  libigl-cursive-E.dmat  libigl-cursive-P.dmat  libigl-cursive-V.dmat
include/: Creation_Primitive.h  Mesh.h  SDF.h
src/: Creation_Primitive.cpp  SDF.cpp  example.cpp  exo4.cpp  main.cpp  proj.cpp
